tests/NormalTests/paczka2/big_fuzzy/97913661.err
Error in line 16: pdlCA A837 7_,8
Error in line 11: Hs2YL1 A837 69,8
Error in line 9: pdlCA A837 42,6
Error in line 28: S241 A221 20,7
Error in line 30: pdlCA S241 74,8
Error in line 34: pdlCA A221 45,8
Error in line 45: S241 S241 86,4
Error in line 54: pdlCA A837 0,3
Error in line 59: 7LHxlj2 S241 98,5
Error in line 61: s4fUBDhehI S241 40,1
Error in line 69: s4fUBDhehI A837 86,9
Error in line 74: s4fUBDhehI S241 65,55
Error in line 83: 7LHxlj2 A837 67,0
Error in line 92: pdlCA A837 30,1
Error in line 94: 56A1wr S241 50,5
Error in line 79: S241 A837 28,7
Error in line 100: S241 A221 65,3
Error in line 99: Hs2YL1 S241 28,8
Error in line 106: pdlCA S241 196,1
Error in line 110: pdlCA A837 77,4
Error in line 134: sqfUBDhehI S2q1 68,6
Error in line 132: s4fUBDhehI S241 53,6
Error in line 142: S241 A221 59,7
Error in line 167: s4fUBDhehI A221 11,6
Error in line 172: 6kO A837 2,9
Error in line 173: Hs2YL1 A221 241,0
Error in line 184: 56A1wr A221 48,4
Error in line 202: 6kO A221 64,8
Error in line 207: s4fUBDhehI A221 3e,6
Error in line 182: pdlCA S241 301,0
Error in line 213: pdlCA S241 24,6
Error in line 216: pdlCA A221 6,6
Error in line 205: 7LHxlj2 A221 74,9
Error in line 220: 7LHxlj2 S241 74,8
Error in line 219: 6kO A221 63,2
Error in line 225: s4fUBDhehI A221 10,7
Error in line 224: 6kO A837 28,4
Error in line 229: 56A1wr A221 29,9
Error in line 230: 56A1wr S241 26,2
